[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/LightSwitch.gd" type="Script" id=1]
[ext_resource path="res://assets/light_switch_off.png" type="Texture" id=2]
[ext_resource path="res://assets/light_switch_on.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 32 )

[node name="LightSwitch" type="Area2D"]
collision_layer = 1024
collision_mask = 1024
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="OffSprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="OnSprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )

[node name="Cooldown" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_LightSwitch_body_entered"]
